scrollbar styles + small fix. TODO: fix transitions on mobile and tablet and complete the READ-ME

--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -21,3 +21,17 @@ body {
   display: grid;
   place-items: center;
 }
+
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--slate-200);
+}
+
+::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  border-radius: 1rem;
+  background: var(--slate-500);
+}
