--- a/src/app/ui/result/result.component.scss
+++ b/src/app/ui/result/result.component.scss
@@ -20,6 +20,7 @@
 
   &__empty {
     height: 100%;
+    overflow-x: hidden;
     padding: var(--spacing-500);
     display: flex;
     flex-direction: column;
